@@ -1,3 +1,9 @@
+=== HEAD
+
+* Bugfixes
+
+  * Nokogiri::XML::NodeSet#search will search top level nodes. GH #73
+
 === 1.3.1 / 2009-06-07
 
 * Bugfixes
